--- a/index.html
+++ b/index.html
@@ -1,166 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Precision Education — Year 10 Chemistry</title>
-  <meta name="description" content="Interactive Periodic Table and Year 10 resources — Group pages, feedback and demos."/>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Group 1 Metals - Alkali Metals</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <div class="logo">PE</div>
-        <div class="brand-copy">
-          <h1>Precision Education</h1>
-          <p class="tag">Year 10 • Chemistry — clear notes & interactive demos</p>
-        </div>
-      </div>
-
-      <nav class="nav" aria-label="Main navigation">
-        <a href="index.html" class="nav-link active">Home</a>
-        <a href="group1.html" class="nav-link">Group 1 (Alkali)</a>
-        <a href="#feedback" class="nav-link">Feedback</a>
-        <a href="#contact" class="nav-link">Contact</a>
-      </nav>
-
-      <button id="navToggle" class="nav-toggle" aria-label="Toggle navigation">☰</button>
-    </div>
+  <!-- Header -->
+  <header>
+    <h1>Group 1 Metals (Alkali Metals)</h1>
+    <nav>
+      <ul>
+        <li><a href="#overview">Overview</a></li>
+        <li><a href="#properties">Properties</a></li>
+        <li><a href="#elements">Elements</a></li>
+        <li><a href="#reactions">Reactions</a></li>
+        <li><a href="#quiz">Quiz</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main id="main" class="container">
-    <section class="hero card">
-      <div class="hero-left">
-        <h2>Interactive Periodic Table — Year 10</h2>
-        <p class="muted">Click an element cell for quick info. Click any Group 1 element to open the full Group 1 learning page (specially prepared for Year 10 clarity).</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h2>Welcome to Alkali Metals</h2>
+    <p>Learn about the most reactive metals in the periodic table!</p>
+    <button id="learnMoreBtn">Explore More</button>
+  </section>
 
-        <div class="hero-cta">
-          <a class="btn primary" href="group1.html">Open Group 1 (Alkali Metals)</a>
-          <button id="showNamesBtn" class="btn outline">Show Names</button>
-        </div>
+  <!-- Overview -->
+  <section id="overview" class="content-section">
+    <h2>Overview</h2>
+    <p>Group 1 metals, also called <b>alkali metals</b>, include Lithium, Sodium, Potassium, Rubidium, Cesium, and Francium. They are soft, shiny, and extremely reactive.</p>
+  </section>
 
-        <div class="search-row">
-          <label for="elementSearch" class="sr-only">Search element</label>
-          <input id="elementSearch" type="search" placeholder="Search element by symbol or name (e.g. Na, Sodium)" />
-          <button id="clearSearch" class="btn tiny">Clear</button>
-        </div>
+  <!-- Properties -->
+  <section id="properties" class="content-section">
+    <h2>Properties of Group 1 Metals</h2>
+    <ul>
+      <li>Low density (float on water)</li>
+      <li>Very soft, can be cut with a knife</li>
+      <li>Highly reactive with water and oxygen</li>
+      <li>Form alkaline solutions when reacting with water</li>
+      <li>Shiny but tarnish quickly in air</li>
+    </ul>
+  </section>
+
+  <!-- Elements -->
+  <section id="elements" class="content-section">
+    <h2>Group 1 Elements</h2>
+    <div class="element-cards">
+      <div class="card">
+        <h3>Li</h3>
+        <p>Lithium - Used in batteries.</p>
       </div>
-
-      <div class="hero-right">
-        <dl class="facts">
-          <div><dt>Valence</dt><dd><strong>1</strong> (one outer electron)</dd></div>
-          <div><dt>Key trend</dt><dd>Reactivity increases down Group 1</dd></div>
-          <div><dt>Useful formula</dt><dd>2M + 2H<sub>2</sub>O → 2MOH + H<sub>2</sub></dd></div>
-        </dl>
+      <div class="card">
+        <h3>Na</h3>
+        <p>Sodium - Essential in salt (NaCl).</p>
       </div>
-    </section>
-
-    <section class="grid-2">
-      <article class="card" aria-labelledby="tableTitle">
-        <div class="card-header">
-          <h3 id="tableTitle">Full Periodic Table</h3>
-          <p class="muted small">Click a cell for info. Group 1 cells link to the Group 1 page.</p>
-        </div>
-
-        <div id="periodicTable" class="periodic-table" aria-live="polite"></div>
-
-        <div class="table-legend">
-          <span class="legend-item"><i class="legend-swatch alkali"></i> Group 1 (alkali)</span>
-          <span class="legend-item"><i class="legend-swatch metal"></i> Metal</span>
-          <span class="legend-item"><i class="legend-swatch nonmetal"></i> Non-metal</span>
-        </div>
-      </article>
-
-      <aside class="card side-panel" aria-labelledby="navTitle">
-        <h4 id="navTitle">Quick navigation & resources</h4>
-
-        <ul class="side-links">
-          <li><a href="group1.html">Group 1 — Alkali Metals (Y10)</a></li>
-          <li><a href="#feedback">Feedback form</a></li>
-          <li><a href="#contact">Contact & teacher notes</a></li>
-        </ul>
-
-        <div class="fb-area">
-          <h5>Facebook</h5>
-          <p class="muted">Follow Precision Education (placeholder)</p>
-          <a class="btn outline" href="https://facebook.com" target="_blank" rel="noopener">Open Facebook</a>
-        </div>
-
-        <div class="notes">
-          <h5>Teacher note</h5>
-          <p class="muted small">This table is generated from a JS dataset — easy to annotate for classroom-specific notes.</p>
-        </div>
-      </aside>
-    </section>
-
-    <section id="how" class="card">
-      <h3>How the table works (teacher notes)</h3>
-      <ol>
-        <li>Each cell displays atomic number and symbol. Hover to show the name.</li>
-        <li>Click a Group 1 cell to open the Group 1 learning page (images, properties, equations).</li>
-        <li>Use the search box to highlight elements by symbol or name.</li>
-      </ol>
-    </section>
-
-    <section id="feedback" class="card" aria-labelledby="fbTitle">
-      <h3 id="fbTitle">Feedback</h3>
-      <p class="muted">Use the short feedback form to send classroom comments or suggestions. Submits to Formspree (replace action URL with your endpoint).</p>
-
-      <form id="feedbackForm" class="feedback-form" action="https://formspree.io/f/yourformid" method="POST">
-        <div class="row">
-          <label>
-            Name (optional)
-            <input name="name" placeholder="Teacher or student">
-          </label>
-          <label>
-            Email (optional)
-            <input name="email" type="email" placeholder="you@example.com">
-          </label>
-        </div>
-
-        <label>
-          Feedback
-          <textarea name="message" placeholder="Your suggestions or issues..." required></textarea>
-        </label>
-
-        <label class="rating">
-          Rating
-          <div class="stars" id="ratingStars" role="radiogroup" aria-label="Feedback rating">
-            <button type="button" class="star" data-value="1" aria-label="1 star">★</button>
-            <button type="button" class="star" data-value="2" aria-label="2 stars">★</button>
-            <button type="button" class="star" data-value="3" aria-label="3 stars">★</button>
-            <button type="button" class="star" data-value="4" aria-label="4 stars">★</button>
-            <button type="button" class="star" data-value="5" aria-label="5 stars">★</button>
-          </div>
-          <input type="hidden" name="rating" id="ratingInput" value="">
-        </label>
-
-        <div class="form-actions">
-          <button class="btn primary" type="submit">Send Feedback</button>
-          <div id="feedbackMessage" class="muted small" aria-live="polite"></div>
-        </div>
-      </form>
-    </section>
-
-    <section id="contact" class="card">
-      <h3>Contact & Copyright</h3>
-      <p class="muted">Precision Education — Designed for Year 10 clarity.</p>
-      <p class="small muted">Contact: <a href="mailto:info@precision-edu.example">info@precision-edu.example</a></p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div>© 2025 Precision Education</div>
-      <nav class="footer-nav">
-        <a href="index.html">Home</a> · <a href="group1.html">Group 1</a> · <a href="#feedback">Feedback</a>
-      </nav>
+      <div class="card">
+        <h3>K</h3>
+        <p>Potassium - Important for plant growth.</p>
+      </div>
+      <div class="card">
+        <h3>Rb</h3>
+        <p>Rubidium - Used in research.</p>
+      </div>
+      <div class="card">
+        <h3>Cs</h3>
+        <p>Cesium - Used in atomic clocks.</p>
+      </div>
+      <div class="card">
+        <h3>Fr</h3>
+        <p>Francium - Rare and highly radioactive.</p>
+      </div>
     </div>
+  </section>
+
+  <!-- Reactions -->
+  <section id="reactions" class="content-section">
+    <h2>Reactions with Water</h2>
+    <p>Observe how Group 1 metals react with water. (Click to simulate!)</p>
+    <div class="reaction-buttons">
+      <button onclick="simulateReaction('Lithium')">Lithium</button>
+      <button onclick="simulateReaction('Sodium')">Sodium</button>
+      <button onclick="simulateReaction('Potassium')">Potassium</button>
+    </div>
+    <div id="reactionOutput"></div>
+  </section>
+
+  <!-- Quiz -->
+  <section id="quiz" class="content-section">
+    <h2>Quick Quiz</h2>
+    <p>Test your knowledge!</p>
+    <div id="quizContainer">
+      <p id="quizQuestion"></p>
+      <div id="quizOptions"></div>
+      <button id="nextBtn">Next</button>
+    </div>
+    <p id="quizResult"></p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Group 1 Metals Education Project</p>
   </footer>
 
-  <div id="elementTooltip" class="tooltip" role="status" aria-hidden="true"></div>
-
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
