--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
                     
                     <div class="highlight-box">
                         <h4>Electron Configuration</h4>
-                        <p>All Group 1 elements have the electron configuration ns¹, where n is the period number. This single valence electron is easily lost, making these elements highly reactive metals.</p>
+                        <p>All Group 1 elements have an electron number configuration that ends with a single electron in the outermost shell, such as lithium 2,1, sodium 2,8,1, and potassium 2,8,8,1; this single valence electron is easily lost, which makes these elements highly reactive metals.</p>
                     </div>
                     
                     <p class="text-gray-700 mt-4">
@@ -1189,7 +1189,7 @@
                             <img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Rb5.JPG" alt="Rubidium" class="element-image">
                             <h4 class="font-bold text-lg">Rubidium (Rb)</h4>
                             <p class="text-sm text-gray-600">Atomic: 37</p>
-                            <p class="text-xs text-gray-500 mt-1">Electron config: 2,8,18,8,1</p>
+                            <p class="text-xs text-gray-500 mt-1">Electron config: 2, 8, 18, 8,1</p>
                             <p class="text-xs text-gray-500 mt-1">Used in atomic clocks</p>
                         </div>
                         <div class="element-card">
@@ -3075,4 +3075,5 @@
     </script>
 </body>
 </html>
+
 
