--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@
 </head>
 <body>
     <!-- Landing Page (shown when user hasn't signed in) -->
-    <div id="landingPage" class="landing-container" style="display: none;">
+    <div id="landingPage" class="landing-container">
         <div class="landing-card">
             <div class="landing-icon text-reveal delay-100">
                 <i class="fas fa-atom"></i>
