--- a/index.html
+++ b/index.html
@@ -786,6 +786,7 @@ padding: 1.5rem;
 margin-bottom: 1rem;
 box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease;
+position: relative;
 }
 .study-group-card:hover {
 transform: translateY(-3px);
@@ -805,6 +806,11 @@ font-size: 0.75rem;
 margin-right: -10px;
 border: 2px solid white;
 }
+.study-group-activity {
+font-size: 0.875rem;
+color: #6b7280;
+margin-top: 0.5rem;
+}
 /* Comment Styles */
 .comment-section {
 background: rgba(255, 255, 255, 0.95);
@@ -819,6 +825,7 @@ padding: 1rem;
 margin-bottom: 1rem;
 border-left: 4px solid #4f46e5;
 transition: all 0.3s ease;
+position: relative;
 }
 .comment:hover {
 transform: translateX(5px);
@@ -828,9 +835,30 @@ box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
 font-weight: 600;
 color: #1f2937;
 margin-bottom: 0.25rem;
+display: flex;
+align-items: center;
+}
+.comment-avatar {
+width: 24px;
+height: 24px;
+border-radius: 50%;
+background: linear-gradient(135deg, #4f46e5, #7c3aed);
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: 600;
+font-size: 0.625rem;
+margin-right: 0.5rem;
 }
 .comment-text {
 color: #4b5563;
+line-height: 1.5;
+}
+.comment-time {
+font-size: 0.75rem;
+color: #9ca3af;
+margin-top: 0.25rem;
 }
 .comment-form {
 display: flex;
@@ -856,6 +884,21 @@ transition: all 0.3s ease;
 }
 .comment-submit:hover {
 background: #4338ca;
+}
+.comment-actions {
+position: absolute;
+top: 1rem;
+right: 1rem;
+display: flex;
+gap: 0.5rem;
+}
+.comment-action {
+color: #9ca3af;
+cursor: pointer;
+transition: color 0.2s;
+}
+.comment-action:hover {
+color: #4f46e5;
 }
 /* Highlight Box */
 .highlight-box {
@@ -1124,6 +1167,26 @@ font-weight: 600;
 }
 .step-progress-label.completed {
 color: #10b981;
+}
+/* Empty State */
+.empty-state {
+text-align: center;
+padding: 3rem 1rem;
+color: #6b7280;
+}
+.empty-state-icon {
+font-size: 3rem;
+color: #d1d5db;
+margin-bottom: 1rem;
+}
+.empty-state-title {
+font-size: 1.25rem;
+font-weight: 600;
+margin-bottom: 0.5rem;
+}
+.empty-state-description {
+max-width: 400px;
+margin: 0 auto;
 }
 </style>
 </head>
@@ -2083,7 +2146,13 @@ Create Group
 </button>
 </div>
 <div id="studyGroupsContainer">
-<!-- Study groups will be loaded here -->
+<div class="empty-state">
+<div class="empty-state-icon">
+<i class="fas fa-users"></i>
+</div>
+<h3 class="empty-state-title">No Study Groups Yet</h3>
+<p class="empty-state-description">Create your first study group to collaborate with peers on mastering Group 1 Alkali Metals.</p>
+</div>
 </div>
 </div>
 </div>
@@ -2095,7 +2164,13 @@ Create Group
 Discussion
 </h3>
 <div id="commentsContainer">
-<!-- Comments will be loaded here -->
+<div class="empty-state">
+<div class="empty-state-icon">
+<i class="fas fa-comments"></i>
+</div>
+<h3 class="empty-state-title">No Comments Yet</h3>
+<p class="empty-state-description">Be the first to share your thoughts about Group 1 Alkali Metals.</p>
+</div>
 </div>
 <div class="comment-form">
 <input type="text" id="commentInput" class="comment-input" placeholder="Share your thoughts...">
@@ -3400,7 +3475,14 @@ const groupsRef = database.ref('studyGroups');
 groupsRef.orderByChild('createdAt').on('value', (snapshot) => {
 container.innerHTML = '';
 if (!snapshot.exists()) {
-container.innerHTML = '<p class="text-gray-500 text-center">No study groups yet. Create one!</p>';
+container.innerHTML = `
+<div class="empty-state">
+<div class="empty-state-icon">
+<i class="fas fa-users"></i>
+</div>
+<h3 class="empty-state-title">No Study Groups Yet</h3>
+<p class="empty-state-description">Create your first study group to collaborate with peers on mastering Group 1 Alkali Metals.</p>
+</div>`;
 return;
 }
 const groupsArray = [];
@@ -3429,6 +3511,14 @@ function createStudyGroupCard(group) {
 const card = document.createElement('div');
 card.className = 'study-group-card';
 const isMember = currentUser && group.members && group.members.includes(currentUser.uid);
+const memberCount = group.members ? group.members.length : 0;
+const maxMembers = group.maxMembers || 10;
+const isFull = memberCount >= maxMembers;
+
+// Format creation date
+const createdDate = group.createdAt ? new Date(group.createdAt) : new Date();
+const formattedDate = createdDate.toLocaleDateString();
+
 card.innerHTML = `
 <div class="flex justify-between items-start mb-3">
 <div>
@@ -3436,8 +3526,9 @@ card.innerHTML = `
 <p class="text-sm text-gray-600">Created by ${group.creatorName}</p>
 </div>
 <button onclick="${isMember ? 'leaveStudyGroup' : 'joinStudyGroup'}('${group.id}')"
-class="btn ${isMember ? 'btn-danger' : 'btn-primary'} text-sm">
-${isMember ? 'Leave' : 'Join'}
+class="btn ${isMember ? 'btn-danger' : 'btn-primary'} text-sm"
+${isFull && !isMember ? 'disabled' : ''}>
+${isMember ? 'Leave' : isFull ? 'Full' : 'Join'}
 </button>
 </div>
 <p class="text-gray-700 mb-3">${group.description}</p>
@@ -3447,17 +3538,22 @@ ${isMember ? 'Leave' : 'Join'}
 <span class="text-sm text-gray-600">${group.goal}</span>
 </div>
 <div class="text-sm text-gray-600">
-${group.memberCount || 0}/${group.maxMembers} members
+${memberCount}/${maxMembers} members
 </div>
 </div>
+<div class="flex items-center justify-between">
 <div class="flex items-center">
 <div class="flex -space-x-2">
 ${(group.members || []).slice(0, 5).map(member =>
-`<div class="member-avatar">${member.charAt(0).toUpperCase()}</div>`
+`<div class="member-avatar" title="${member}">${member.charAt(0).toUpperCase()}</div>`
 ).join('')}
-${(group.memberCount || 0) > 5 ?
-`<div class="member-avatar">+${(group.memberCount || 0) - 5}</div>` : ''
+${(memberCount || 0) > 5 ?
+`<div class="member-avatar">+${(memberCount || 0) - 5}</div>` : ''
 }
+</div>
+</div>
+<div class="study-group-activity">
+Created on ${formattedDate}
 </div>
 </div>
 `;
@@ -3470,13 +3566,19 @@ if (!currentUser) {
 showToast('error', 'Sign in required', 'Please sign in to create study groups.');
 return;
 }
-const name = document.getElementById('groupName').value;
-const description = document.getElementById('groupDescription').value;
-const goal = document.getElementById('groupGoal').value;
+const name = document.getElementById('groupName').value.trim();
+const description = document.getElementById('groupDescription').value.trim();
+const goal = document.getElementById('groupGoal').value.trim();
 const maxMembers = parseInt(document.getElementById('groupMaxMembers').value);
+
+if (!name || !description || !goal) {
+showToast('error', 'Missing Fields', 'Please fill in all fields.');
+return;
+}
+
 showLoading();
 const groupsRef = database.ref('studyGroups').push();
-groupsRef.set({
+const newGroup = {
 name: name,
 description: description,
 goal: goal,
@@ -3485,8 +3587,11 @@ creatorId: currentUser.uid,
 creatorName: userData.displayName,
 members: [currentUser.uid],
 memberCount: 1,
-createdAt: firebase.database.ServerValue.TIMESTAMP
-}).then(() => {
+createdAt: firebase.database.ServerValue.TIMESTAMP,
+lastActivity: firebase.database.ServerValue.TIMESTAMP
+};
+
+groupsRef.set(newGroup).then(() => {
 showToast('success', 'Group Created', 'Your study group has been created successfully.');
 closeCreateStudyGroup();
 document.getElementById('createStudyGroupForm').reset();
@@ -3528,6 +3633,7 @@ members.push(currentUser.uid);
 const updates = {};
 updates['/members'] = members;
 updates['/memberCount'] = (group.memberCount || 0) + 1;
+updates['/lastActivity'] = firebase.database.ServerValue.TIMESTAMP;
 groupRef.update(updates).then(() => {
 showToast('success', 'Joined Group', 'You have successfully joined the study group.');
 // Award points
@@ -3558,6 +3664,7 @@ const updatedMembers = members.filter(member => member !== currentUser.uid);
 const updates = {};
 updates['/members'] = updatedMembers;
 updates['/memberCount'] = Math.max(0, (group.memberCount || 0) - 1);
+updates['/lastActivity'] = firebase.database.ServerValue.TIMESTAMP;
 groupRef.update(updates).then(() => {
 showToast('success', 'Left Group', 'You have successfully left the study group.');
 }).catch((error) => {
@@ -3578,7 +3685,14 @@ const commentsRef = database.ref('comments');
 commentsRef.orderByChild('createdAt').on('value', (snapshot) => {
 container.innerHTML = '';
 if (!snapshot.exists()) {
-container.innerHTML = '<p class="text-gray-500 text-center">No comments yet. Be the first to comment!</p>';
+container.innerHTML = `
+<div class="empty-state">
+<div class="empty-state-icon">
+<i class="fas fa-comments"></i>
+</div>
+<h3 class="empty-state-title">No Comments Yet</h3>
+<p class="empty-state-description">Be the first to share your thoughts about Group 1 Alkali Metals.</p>
+</div>`;
 return;
 }
 const commentsArray = [];
@@ -3606,11 +3720,26 @@ container.innerHTML = '<p class="text-gray-500 text-center">Error loading commen
 function createCommentElement(comment) {
 const commentDiv = document.createElement('div');
 commentDiv.className = 'comment';
-const date = comment.createdAt ? new Date(comment.createdAt).toLocaleDateString() : 'Unknown date';
+const date = comment.createdAt ? new Date(comment.createdAt) : new Date();
+const formattedDate = date.toLocaleDateString();
+const formattedTime = date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+const isAuthor = currentUser && comment.authorId === currentUser.uid;
+
 commentDiv.innerHTML = `
-<div class="comment-author">${comment.authorName || 'Anonymous'}</div>
-<div class="text-xs text-gray-500 mb-1">${date}</div>
+<div class="comment-author">
+<div class="comment-avatar">${comment.authorName ? comment.authorName.charAt(0).toUpperCase() : 'A'}</div>
+${comment.authorName || 'Anonymous'}
+${isAuthor ? '<span style="font-size: 0.75rem; color: #6b7280; margin-left: 0.5rem;">(You)</span>' : ''}
+</div>
+<div class="comment-time">${formattedDate} at ${formattedTime}</div>
 <div class="comment-text">${comment.text}</div>
+${isAuthor ? `
+<div class="comment-actions">
+<div class="comment-action" onclick="deleteComment('${comment.id}')" title="Delete comment">
+<i class="fas fa-trash"></i>
+</div>
+</div>
+` : ''}
 `;
 return commentDiv;
 }
@@ -3629,12 +3758,13 @@ return;
 }
 showLoading();
 const commentsRef = database.ref('comments').push();
-commentsRef.set({
+const newComment = {
 authorId: currentUser.uid,
 authorName: userData.displayName,
 text: commentText,
 createdAt: firebase.database.ServerValue.TIMESTAMP
-}).then(() => {
+};
+commentsRef.set(newComment).then(() => {
 commentInput.value = '';
 showToast('success', 'Comment Posted', 'Your comment has been posted successfully.');
 // Award points
@@ -3642,6 +3772,27 @@ awardPoints(5, 'Comment posted');
 }).catch((error) => {
 console.error("Error adding comment:", error);
 showToast('error', 'Error', 'Failed to post comment.');
+}).finally(() => {
+hideLoading();
+});
+}
+
+// Delete comment
+function deleteComment(commentId) {
+if (!currentUser) {
+showToast('error', 'Sign in required', 'Please sign in to delete comments.');
+return;
+}
+if (!confirm('Are you sure you want to delete this comment?')) {
+return;
+}
+showLoading();
+const commentRef = database.ref('comments/' + commentId);
+commentRef.remove().then(() => {
+showToast('success', 'Comment Deleted', 'Your comment has been deleted successfully.');
+}).catch((error) => {
+console.error("Error deleting comment:", error);
+showToast('error', 'Error', 'Failed to delete comment.');
 }).finally(() => {
 hideLoading();
 });
