--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
          </div>
          
-         <a href="alkalimetals.html" class="btn btn-primary">
+         <a href="alkalimetals/alkalimetals.html" class="btn btn-primary">
             <i class="fas fa-arrow-right"></i>
             Enter Learning Platform
          </a>
