--- a/alkalimetals/alkalimetals.html
+++ b/alkalimetals/alkalimetals.html
@@ -16,8 +16,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     
     <!-- Custom CSS and JS -->
-    <link rel="stylesheet" href="https://github.com/andrewung2009/group1periodictable/edit/main/alkalimetals/styles.html">
-    <script src="https://github.com/andrewung2009/group1periodictable/edit/main/alkalimetals/script.js" defer></script>
+    <link rel="stylesheet" href="https://andrewung2009.github.io/group1periodictable/alkalimetals/styles.css">
+    <script src="https://andrewung2009.github.io/group1periodictable/alkalimetals/script.js" defer></script>
 </head>
 <body>
     <!-- Landing Page -->
