--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>TheCuriousChemist - Chemistry Learning Platform</title>
       <meta name="description" content="TheCuriousChemist - Interactive learning platform for mastering chemistry">
+      <!-- Favicon -->
+      <link rel="icon" type="image/png" href="TheCuriousChemist.png">
       <!-- Tailwind CSS -->
       <script src="https://cdn.tailwindcss.com"></script>
       <!-- Font Awesome -->
