--- a/alkalimetals/alkalimetals.html
+++ b/alkalimetals/alkalimetals.html
@@ -4,6 +4,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Favicon -->
+      <link rel="icon" type="image/png" href="TheCuriousChemist.png">
       <title>Group 1 Alkali Metals - Chemistry</title>
       <meta name="description" content="Interactive learning platform for mastering Group 1 Alkali Metals in chemistry">
       <!-- Tailwind CSS -->
