--- a/alkalimetals/alkalimetals.html
+++ b/alkalimetals/alkalimetals.html
@@ -18,8 +18,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
       <!-- Howler for sound effects -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-      <!-- Favicon -->
-      <link rel="icon" type="image/png" href="TheCuriousChemist.png">
+      <link rel="icon" type="image/png" href="https://andrewung2009.github.io/group1periodictable/TheCuriousChemist.png">
       <style>
          :root {
          --primary: #4f46e5;
