--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                      Explore the fundamental principles of chemistry through interactive lessons, engaging visuals, and comprehensive study materials designed for high school students.
                   </p>
                   <div class="flex flex-wrap justify-center md:justify-start gap-4">
-                     <a href="https://andrewung2009.github.io/TheCuriousChemist/alkalimetals/alkalimetals.html" class="btn btn-primary">
+                     <a href="alkalimetals/index.html" class="btn btn-primary">
                      <i class="fas fa-play-circle mr-2"></i>
                      Start Learning
                      </a>
