--- a/alkaliearthmetals/index.html
+++ b/alkaliearthmetals/index.html
@@ -434,28 +434,15 @@
                         </ul>
                      </div>
                   </div>
-                  <!-- Interactive Element Quiz Popup -->
-                  <div id="elementQuizPopup" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
-                     <div class="bg-white rounded-lg p-6 max-w-md w-full shadow-xl">
-                        <h3 class="text-xl font-bold mb-4" id="elementQuizTitle">Element Quiz</h3>
-                        <p id="elementQuizQuestion" class="mb-4"></p>
-                        <div id="elementQuizOptions" class="space-y-2 mb-4"></div>
-                        <div id="elementQuizFeedback" class="mb-4 p-3 rounded-lg hidden"></div>
-                        <button onclick="closeElementQuiz()" class="btn btn-primary w-full">Close</button>
-                     </div>
-                  </div>
                   <!-- YouTube Video -->
                   <div class="mt-8">
                      <h4 class="font-semibold mb-3">Learn More:</h4>
                      <div class="aspect-w-16 aspect-h-9">
-                        <iframe src="https://www.youtube.com/embed/5M1d2g7d4i8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="w-full h-64 rounded-lg transform transition-all duration-300 hover:scale-105"></iframe>
+                        <iframe src="https://www.youtube.com/embed/5M1d2g7d4i8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" class="w-full h-64 rounded-lg transform transition-all duration-300 hover:scale-105"></iframe>
                      </div>
                   </div>
                   <div class="flex justify-center mt-6">
-                     <button id="overview-complete-btn" class="btn btn-success section-complete-btn transform transition-all duration-300 hover:scale-105" onclick="completeSection('overview')">
-                     <i class="fas fa-check mr-2"></i>
-                     Mark as Complete
-                     </button>
+                     <button id="overview-complete-btn" class="btn section-complete-btn transform transition-all duration-300 hover:scale-105 btn-unmark" onclick="completeSection('overview')"><i class="fas fa-times mr-2"></i>Unmark as Complete</button>
                   </div>
                </div>
             </section>
@@ -1285,6 +1272,18 @@
       </div>
       <!-- Toast Container -->
       <div id="toastContainer"></div>
+      
+      <!-- MODAL FIX: The quiz popup is now here, at the end of the body -->
+      <!-- Interactive Element Quiz Popup -->
+      <div id="elementQuizPopup" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+         <div class="bg-white rounded-lg p-6 max-w-md w-full shadow-xl">
+            <h3 class="text-xl font-bold mb-4" id="elementQuizTitle">Element Quiz</h3>
+            <p id="elementQuizQuestion" class="mb-4"></p>
+            <div id="elementQuizOptions" class="space-y-2 mb-4"></div>
+            <div id="elementQuizFeedback" class="mb-4 p-3 rounded-lg hidden"></div>
+            <button onclick="closeElementQuiz()" class="btn btn-primary w-full">Close</button>
+         </div>
+      </div>
       
       <!-- JavaScript Files -->
       <!-- Firebase Configuration -->
